--- a/vars/main.yml
+++ b/vars/main.yml
@@ -38,10 +38,10 @@ steamengine_java_base_opts:
   - "-Xdump:heap:events=user"
 
 # Symfony 4/5
-steamengine_sf4_external_logs_path: "{{ steamengine_logs_path }}/symfony4"
-steamengine_sf4_public_path: "{{ steamengine_project_root_path_web }}/public"
-steamengine_sf4_bin_path: "{{ steamengine_project_root_path_web }}/bin"
-steamengine_sf4_var_path: "{{ steamengine_project_root_path_web }}/var"
-steamengine_sf4_log_path: "{{ steamengine_sf4_var_path }}/log"
-steamengine_sf4_cache_path: "{{ steamengine_sf4_var_path }}/cache"
+steamengine_sf4_external_logs_path: "{{ steamengine_logs_path }}/{{ steamengine_sf4_public_directory }}"
+steamengine_sf4_public_path: "{{ steamengine_project_root_path_web }}/{{ steamengine_sf4_public_directory }}"
+steamengine_sf4_bin_path: "{{ steamengine_project_root_path_web }}/{{ steamengine_sf4_bin_directory }}"
+steamengine_sf4_var_path: "{{ steamengine_project_root_path_web }}/{{ steamengine_sf4_var_directory }}"
+steamengine_sf4_log_path: "{{ steamengine_sf4_var_path }}/{{ steamengine_sf4_log_directory }}"
+steamengine_sf4_cache_path: "{{ steamengine_sf4_var_path }}/{{ steamengine_sf4_cache_directory }}"
 steamengine_sf4_persistent_path: "{{ steamengine_project_root_path }}/link"
