--- a/tasks/drupal8/deploy.yml
+++ b/tasks/drupal8/deploy.yml
@@ -29,6 +29,35 @@
   tags:
     - steamengine_deploy_drupal8
 
+- name: Ensure drupal project exists
+  stat:
+    path: "{{ steamengine_project_root_path_web }}/web"
+  register: drupal_exists
+  tags:
+    - steamengine_deploy_drupal8
+
+- name: Link files in drupal
+  file:
+    state: link
+    src: "{{ steamengine_home_path }}/default/files"
+    dest: "{{ steamengine_project_root_path_web }}/web/sites/default/files"
+    force: yes
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+  when: drupal_exists.stat.exists
+  tags:
+    - steamengine_deploy_drupal8
+
+- name: Ensure files folder exists
+  file:
+    path: "{{ steamengine_home_path }}/default/files"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rwx,g=rwx,o=
+    state: directory
+  tags:
+    - steamengine_deploy_drupal8
+
 - name: Unzip project
   unarchive:
     src: "{{ steamengine_home_path }}/project.zip"
@@ -106,7 +135,7 @@
     - steamengine_deploy_drupal8
 
 - name: Drupal deploy db
-  shell: "drush sql:cli < {{ steamengine_home_path }}/{{ steamengine_db_dump_filename }}"
+  shell: "{{ steamengine_drupal_drush_path }} sql:cli < {{ steamengine_home_path }}/{{ steamengine_db_dump_filename }}"
   args:
     chdir: "{{ steamengine_project_root_path_web }}"
   when: db_dump.changed
@@ -114,7 +143,7 @@
     - steamengine_deploy_drupal8
 
 - name: Update the database
-  shell: "drush updatedb -y"
+  shell: "{{ steamengine_drupal_drush_path }} updatedb -y"
   args:
     chdir: "{{ steamengine_project_root_path_web }}"
   when: db_dump.changed
@@ -124,7 +153,7 @@
 ### Installing
 
 - name: Check if database is empty
-  shell: "drush sql-query 'show tables'"
+  shell: "{{ steamengine_drupal_drush_path }} sql-query 'show tables'"
   args:
     chdir: "{{ steamengine_project_root_path_web }}"
   register: database_table_number
@@ -142,7 +171,7 @@
 
 - name: If database is empty, install Drupal with drush.
   shell: >
-    drush site-install standard -y  \
+    {{ steamengine_drupal_drush_path }} site-install standard -y  \
     --site-name="{{ steamengine_drupal_site_name }}" \
     --account-name="{{ steamengine_drupal_admin_name }}" \
     --account-pass="{{ steamengine_drupal_admin_password }}" \
@@ -151,17 +180,6 @@
   args:
     chdir: "{{ steamengine_project_root_path_web }}"
   when: (build_project.changed or db_dump.changed) and database_table_number.stdout == ""
-  tags:
-    - steamengine_deploy_drupal8
-
-- name: Ensure files folder exists
-  file:
-    path: "{{ steamengine_project_root_path_web }}/web/sites/default/files"
-    state: directory
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-    mode: u=rwx,g=rx,o=
-  when: build_project.changed
   tags:
     - steamengine_deploy_drupal8
 
@@ -174,7 +192,7 @@
     - steamengine_deploy_drupal8
 
 - name: Drupal import config
-  shell: "drush config-import -y --source={{ steamengine_project_root_path_web }}/config"
+  shell: "{{ steamengine_drupal_drush_path }} config-import -y --source={{ steamengine_project_root_path_web }}/config"
   args:
     chdir: "{{ steamengine_project_root_path_web }}"
   when: build_project.changed and config_dir.stat.exists
@@ -184,7 +202,7 @@
 ### Cleaning up and restarting
 
 - name: Clean drupal cache
-  shell: "drush cache:rebuild"
+  shell: "{{ steamengine_drupal_drush_path }} cache:rebuild"
   args:
     chdir: "{{ steamengine_project_root_path_web }}"
   when: build_project.changed
