Modifiy type symfony4 for all symfony project

--- a/molecule/symfony/molecule.yml
+++ b/molecule/symfony/molecule.yml
@@ -24,7 +24,7 @@ provisioner:
   lint:
     name: ansible-lint
 scenario:
-  name: symfony4
+  name: symfony
 verifier:
   name: testinfra
   options:
