--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,19 +50,25 @@ steamengine_java_opts:
   - "-Xmx512M"
   - "-Xms512M"
 
-# Symfony 4/5
-steamengine_sf4_path_with_write_permission:
+# Symfony
+# List of directory we need write permission (modify for symfony < 4)
+steamengine_sf_path_with_write_permission:
   - "var/log"
   - "var/cache"
 # List of path that should be persisted in a folder outside the projet
 # The key is the folder persisted outside the root project, the value is the name (path) of the folder inside the project. A link will be created on it to the persisted folder
-steamengine_sf4_persistent_directory: {}
-steamengine_sf4_doctrine_enable: false
-steamengine_sf4_clear_cache: true
+steamengine_sf_persistent_directory: {}
+steamengine_sf_doctrine_enable: false
+steamengine_sf_clear_cache: true
 # Directory name to store logs outside the project
-steamengine_sf4_external_logs_directory: "symfony"
-steamengine_sf4_public_directory: "public"
-steamengine_sf4_bin_directory: "bin"
-steamengine_sf4_var_directory: "var"
-steamengine_sf4_log_directory: "log"
-steamengine_sf4_cache_directory: "cache"
+steamengine_sf_external_logs_directory: "symfony"
+# Directory for public file (replace with "web" for symfony < 4)
+steamengine_sf_public_directory: "public"
+# Directory for php console file (replace with "app" for symfony < 4)
+steamengine_sf_bin_directory: "bin"
+# Directory which contain cache and log directory (replace with "app" for symfony < 3)
+steamengine_sf_var_directory: "var"
+# Directory for log files (replace with "logs" for symfony < 4)
+steamengine_sf_log_directory: "log"
+# Directory for cache files
+steamengine_sf_cache_directory: "cache"
