--- a/tasks/symfony/asserts.yml
+++ b/tasks/symfony/asserts.yml
@@ -5,4 +5,4 @@
     that: (steamengine_build_url | basename | splitext)[1] == ".zip"
   when: steamengine_build_url is defined and steamengine_build_url
   tags:
-    - steamengine_deploy_sf4
+    - steamengine_deploy_sf
