--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -51,15 +51,18 @@ steamengine_java_opts:
   - "-Xms512M"
 
 # Symfony
+# Php command to run after deployment
+steamengine_sf_php_console_command_deployment:
+  - "cache:clear --env=prod"
 # List of directory we need write permission (modify for symfony < 4)
 steamengine_sf_path_with_write_permission:
   - "var/log"
   - "var/cache"
+# List of source template and target path for configuration to put inside the projet (for example for symfony < 4 : parameters.yml.j2: app/config/parameters.yml )
+steamengine_sf_project_custom_configurations_template_path: {}
 # List of path that should be persisted in a folder outside the projet
 # The key is the folder persisted outside the root project, the value is the name (path) of the folder inside the project. A link will be created on it to the persisted folder
 steamengine_sf_persistent_directory: {}
-steamengine_sf_doctrine_enable: false
-steamengine_sf_clear_cache: true
 # Directory name to store logs outside the project
 steamengine_sf_external_logs_directory: "symfony"
 # Directory for public file (replace with "web" for symfony < 4)
