--- a/molecule/drupal8/molecule.yml
+++ b/molecule/drupal8/molecule.yml
@@ -26,7 +26,7 @@ provisioner:
   lint:
     name: ansible-lint
 scenario:
-  name: drupal8
+  name: drupal
 verifier:
   name: testinfra
   options:
