--- a/vars/main.yml
+++ b/vars/main.yml
@@ -18,7 +18,7 @@ steamengine_project_types:
   - static
   - nodejs
   - tomcat7
-  - drupal8
+  - drupal
   - play
 
 # PLAY
@@ -37,6 +37,6 @@ steamengine_java_base_opts:
   - "-verbose:gc"
   - "-Xdump:heap:events=user"
 
-# DRUPAL8
+# DRUPAL
 steamengine_drupal_project_bin_path: "{{ steamengine_project_root_path_web }}/web/vendor/drupal/console/bin"
 steamengine_drupal_drush_path: "/usr/local/bin/drush"
